--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aniso8601==9.0.1
+astroid==2.11.7
 atomicwrites==1.4.1
 attrs==22.1.0
 black==22.6.0
@@ -6,15 +7,19 @@ certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.5
+dill==0.3.5.1
 flake8==5.0.4
+Flake8-pyproject==1.1.0.post0
 Flask==2.2.2
 Flask-Cors==3.0.10
 Flask-RESTful==0.3.9
 greenlet==1.1.2
 idna==3.3
 iniconfig==1.1.1
+isort==5.10.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
+lazy-object-proxy==1.7.1
 MarkupSafe==2.1.1
 mccabe==0.7.0
 mypy-extensions==0.4.3
@@ -37,6 +42,9 @@ requests==2.28.1
 six==1.16.0
 text-unidecode==1.3
 tomli==2.0.1
+tomlkit==0.11.4
+UNKNOWN @ file:///D:/development/testes_praticos/webscraper_dev_api
 urllib3==1.26.11
 websockets==10.1
 Werkzeug==2.2.2
+wrapt==1.14.1
