--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ flake8==5.0.4
 Flake8-pyproject==1.1.0.post0
 Flask==2.2.2
 Flask-Cors==3.0.10
+Flask-PyMongo==2.3.0
 Flask-RESTful==0.3.9
 future==0.18.2
 greenlet==1.1.2
@@ -36,10 +37,12 @@ pycodestyle==2.9.1
 pyee==8.1.0
 pyflakes==2.5.0
 pyinstaller-hooks-contrib==2022.8
+pymongo==4.2.0
 pyparsing==3.0.9
 pytest==7.1.2
 pytest-base-url==2.0.0
 pytest-playwright==0.3.0
+python-dotenv==0.20.0
 python-slugify==6.1.2
 pytz==2022.2.1
 pywin32-ctypes==0.2.0
