refactor: Refactor functionality to trigger scraper. Now scraper initialization is done by the POST method and it is possible to check if the scraper has already completed the scraping by passing the query userId with the order id through the GET method of the /scrape route.

--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ pymongo==4.2.0
 pyparsing==3.0.9
 pytest==7.1.2
 pytest-base-url==2.0.0
+pytest-flask==1.2.0
 pytest-playwright==0.3.0
 python-dotenv==0.20.0
 python-slugify==6.1.2
