--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,13 @@ services:
   api:
     build: .
     image: webscraper
-    container_name: api
+    container_name: webscraper_api
     ports:
       - "5000:5000"
     volumes:
       - .:/app
     environment:
-      - FLASK_APP=./src/index.py
+      - FLASK_APP=webscraper_api/server.py
       - MONGODB_URI=mongodb://mongodb:27017/webscraper
     networks:
       - webscraper
