docs: add explanation of no docker option for installation and testing.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-MONGODB_URI=
-FLASK_APP=webscraper_api/server.py
+MONGODB_URI=mongodb://<user>:<password>@localhost:27017/webscraper **Caso não possua autenticação basta remover o "<user>:<password>@"
+FLASK_APP=webscraper_api/server.py ***Não mudar
