--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-black==22.6.0
-colorama==0.4.5
-flake8==5.0.4
-Flake8-pyproject==1.1.0.post0
-Flask==2.2.2
+black==23.3.0
+colorama==0.4.6
+flake8==6.0.0
+Flake8-pyproject==1.2.3
+Flask==2.2.3
 Flask-Cors==3.0.10
 Flask-PyMongo==2.3.0
 Flask-RESTful==0.3.9
-playwright==1.25.1
-pymongo==4.2.0
-pytest==7.1.2
+playwright==1.32.1
+pymongo==4.3.3
+pytest==7.3.0
 pytest-base-url==2.0.0
 pytest-flask==1.2.0
-pytest-playwright==0.3.0
-pytest-cov==3.0.0
-python-dotenv==0.20.0
+pytest-playwright==0.3.2
+pytest-cov==4.0.0
+python-dotenv==1.0.0
